@@ -15,7 +15,9 @@ In this files, you will find changes between java OMiSCID versions.
 1.
 r
         fix:  problem of wrong peerId passed to connector listeners when the client is an non-started service and has multiple connectors connected to a same connector
+        fix:  no exception was thrown when adding too many connectors (more than 255) (see associated API impr below)
         impr: (API) added closeConnection, closeAllConnections and removeAllConnectorListeners method to the Service interface
+        impr: (API) added a ConnectorLimitReached runtime exception on Service#addConnector that is thrown when too many connectors are added to a service
 
 1.2.0
 r2609
